Present engagement cards horizontally in an attempt to fix the "too wide" problem

--- a/src/app/projects/project-engagements/project-engagement/project-engagement.component.scss
+++ b/src/app/projects/project-engagements/project-engagement/project-engagement.component.scss
@@ -12,8 +12,20 @@ app-speed-dial {
   z-index: 2;
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+
+  // 24px spacing around cards
+  margin: 12px;
+  mat-card {
+    margin: 12px;
+  }
+}
+
 mat-card {
-  margin: 24px;
+  min-width: 200px;
 }
 
 mat-card-content {
